권한 관리 role -> enum 사용으로 변경